2009-06-27  Benjamin Mack  <benni@typo3.org>

	* Added #4361: Added new hook in class.db_list.inc for the list module (On behalf of Michael Stucki)
	* Fixed bug #6125: MENU before/after* might create invalid HTML output (Thanks to Nabil Saleh)

2009-06-27  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11425: Workspace Shortcut uses hardcoded texts (thanks to Christopher Stelmaszyk)
	* Fixed bug #5061: Message in Web > List isn't localized (thanks to Christopher Stelmaszyk)

2009-06-26  Benjamin Mack  <benni@typo3.org>

	* Fixed Bug #9415 - "Do" Dropdown in Workspace module doesn't respect users rights (Thanks to Franz Koch)

2009-06-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10782: Copying datasets with related data start- and endtime is recalculated (thanks to Niels Pardon)
	* Fixed bug #10175: Duplicated values in localconf.php (thanks to Stefano Kowalke)
	* Added feature #8601: Hook for debug_typo3PrintError
	* Added feature #11229: stdwrap to override image of imageLinkWrap (thanks to Georg Ringer)

2009-06-26  Oliver Hader  <oliver@typo3.org>

	* Added feature #11373: Template-module "ts" uses hardcoded texts (thanks to Christopher Stelmaszyk)
	* Added feature #11378: Constant Editor uses hardcoded texts (thanks to Christopher Stelmaszyk)
	* Fixed bug #11154: calls to deprecated function makeInstanceClassName in core (thanks to Franz-Xaver Koch)
	* Added feature #11410: Speed up BEgetRootLine by reusing parts of the rootline from the cache (thanks to Fabrizio Branca)

2009-06-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11354: Extension manager does not show up Configuration Categories Menu (thanks to Vladimir Podkovanov)

2009-06-24  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #9599: felogin - forget password action and logout action are still cached

2009-06-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11369: jumpUrl should only allow files matching fileDenyPattern (thanks to Ingmar Schlecht)