@@ -1,3 +1,7 @@
+2009-06-27  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #11409: backend.php don't use API to include JS/CSS files
+
 2009-06-27  Benjamin Mack  <benni@typo3.org>
 
 	* Added #4361: Added new hook in class.db_list.inc for the list module (On behalf of Michael Stucki)
